# theinformer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.lib  ReadMe.md
.github/workflows/: cmake-multi-platform.yml
Informer.js/: Makefile  informer.js  informer.wasm  informer_js_wrapper.cpp  test.html
Informer.js/demo/: index.html  style.css
InformerMax/: CMakeLists.txt  License.txt  ReadMe.md  package-info.json  package-info.json.in
InformerMax/extras/: Informer Overview.maxpat
InformerMax/help/: frequency_descriptors.maxpat  frequency_descriptor~.maxpat  informer.bufferdesc.maxhelp  informer.freqdesc.maxhelp  informer.freqdesc~.maxhelp  informer.timedesc.maxhelp  informer.timedesc~.maxhelp
InformerMax/source/projects/informer.bufferdesc/: informer.bufferdesc.cpp
InformerMax/source/projects/informer.freqdesc/: informer.freqdesc.cpp
InformerMax/source/projects/informer.freqdesc_tilde/: informer.freqdesc_tilde.cpp
InformerMax/source/projects/informer.timedesc/: informer.timedesc.cpp
InformerMax/source/projects/informer.timedesc_tilde/: informer.timedesc_tilde.cpp
InformerMax/source/projects/sonus.informer.spec_tilde/: informer.freqdesc.cpp
Max4Live/: The Case Officer.amxd
PyInformer/: CMakeLists.txt  LICENSE  setup.py
PyInformer/pyinformer___Informer_for_Python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PyInformer/src/: pyinformer.cpp
PyInformer/tests/: test_basic.py
RackPlugin/TheInformer/: Makefile  plugin.json
RackPlugin/TheInformer/src/: plugin.cpp  plugin.hpp  theinformer.cpp  udp.hh
Source/: CMakeLists.txt  CustomLookAndFeel.cpp  CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.cpp.orig  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.cpp.orig  PluginProcessor.h  PluginProcessor.h.orig
Source/Source/: PluginProcessor.cpp
